--- a/src/global.css
+++ b/src/global.css
@@ -27,10 +27,15 @@
   
 }
 
-body {
+
+*{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  margin: 0 auto;
   min-width: 320px;
   min-height: 100vh;
   background: var(--gray-600);
