--- a/src/global.css
+++ b/src/global.css
@@ -9,6 +9,7 @@
   -webkit-text-size-adjust: 100%;
 
   /*Variaveis de cor*/
+
   --gray-100: #f2f2f2;
   --gray-200: #D9D9D9;
   --gray-300: #808080;
@@ -20,8 +21,8 @@
   --blue-400: #4EA8DE;
   --blue-600: #1E6F9F;
   
-  -purple-400: #8284FA;
-  -purple-600: #5E60CE;
+  --purple-400: #8284FA;
+  --purple-600: #5E60CE;
 
   -red-200: #E25858;
   width: 100%;
@@ -32,6 +33,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
+  font-family: Inter, sans-serif;
 }
 
 body {
