--- a/src/components/TaskItem/TaskItem.module.css
+++ b/src/components/TaskItem/TaskItem.module.css
@@ -12,7 +12,7 @@
 
 .container > label{
     display: block;
-    width: 39.5rem;
+    width: 100%;
     margin: 0;
     padding: 0;
     overflow-wrap: break-word;
@@ -24,15 +24,6 @@
     margin: 0 .75rem;
 }
 
-.container > label {
-    position: relative;
-    cursor: pointer;
-    display: grid;
-    align-items: center;
-    width: fit-content;
-    transition: color .3s ease;
-  
-}
 
 .container > button{
     display: flex;
